[FIX] - Dropdown z-index

--- a/css/style.css
+++ b/css/style.css
@@ -714,6 +714,7 @@ h6 {
     left: 0;
     width: 100%;
     margin-right: 0;
+    z-index: 900;
   }
 
   .dropdown-toggler {
